[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_app"
version = "0.1.0"
description = "Tennis tracker"
readme = "README.md"
authors = [
    {name = "Your Name"}
]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
